The black background color was not set on the dark mode style sheet. Now solved.

--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,9 @@
     transition: 0.4s;
 	box-sizing: border-box;
 }
+body {
+    background-color: #161616;
+}
 table {
 	filter:blur(0px);
 }
